--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "private": true,
   "devDependencies": {
     "shadow-cljs": "^2.15.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
